# ndis-assistant

./: .gitignore  README.md  catalogue.py  ndis_knowledge.py  pyproject.toml  server.py
assets/: NDIS-Support Catalogue-2025-26 -v1.1.xlsx
