[project]
name = "ndis-mcp-server"
version = "0.1.0"
description = "NDIS knowledge base MCP server for carers portal development"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [project.scripts]
# ndis-mcp = "ndis_mcp_server.server:main"  # Uncomment if packaging as a proper module
