[project]
name = "ndis-mcp-server"
version = "0.1.0"
description = "NDIS knowledge base MCP server for Australian disability support"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [project.scripts]
# ndis-mcp = "ndis_mcp_server.server:main"  # Uncomment if packaging as a proper module
